Fixed bug that showed whitespace on top of the content div.

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -153,9 +153,9 @@
     }
   
     #content, #navbar.nav-collapsed~ #navbar.nav-collapsed~#content:not(.active) {
-      width: 100%;
-      margin: 0 auto;
-      padding: 0;
+      width: 100% !important;
+      margin: 0 auto !important;
+      padding: 1px;
     }
   
     #navbarCollapse {
